--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
 
     defaultConfig {
         applicationId "com.gameofcoding.fontgenerator"
-        minSdkVersion 14
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -19,6 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile fileTree(dir: 'lib', include: ['*'])
+	// Color platte library
+	// implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
+	// Color picking library
+	compile 'com.rarepebble:colorpicker:3.0.1'
+	// Gradient color picking library
+	compile fileTree(dir: 'libs', include: ['*.jar', '*.so'])
 }
