--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,17 +26,23 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-	 <activity
-		android:name=".activities.FilePickerActivity"
-		android:theme="@style/BaseTheme.DialogActivity"
-		android:label="@string/file_picker">
-	 </activity>
+	<activity
+	   android:name=".activities.FilePickerActivity"
+	   android:theme="@style/BaseTheme.DialogActivity"
+	   android:label="@string/file_picker">
+	</activity>
+	<activity
+	   android:name=".activities.ColorPickerActivity"
+	   android:theme="@style/BaseTheme.DialogActivity"
+	   android:label="@string/color_picker">
+	</activity>
 	 <activity
 		android:name=".activities.ConfigFontActivity"
 		android:label="@string/config_font">
 	 </activity>
 	 <activity
-		android:name=".activities.GeneratorLibGDXActivity">
+		android:name=".activities.GeneratorLibGDXActivity"
+		android:theme="@style/BaseTheme.NoActionBar">
 	 </activity>
   </application>
 
